--- a/Sunduk.PWA/Components/Knowledge/VectorComponent.razor
+++ b/Sunduk.PWA/Components/Knowledge/VectorComponent.razor
@@ -1,6 +1,6 @@
 ﻿@inject ISnackbar Snackbar
 
-<MudContainer Class="ml-1 pl-0 pr-1">
+<MudContainer Class="ml-1 mt-2 pl-0 pr-1">
     <MudGrid Spacing="1">
         <MudItem xs="4">
             <MudCard Outlined="true" @onclick="@(() => Snackbar.Add($"Это вектор 4"))">
