--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -14,7 +14,7 @@
         </MudItem>
 
         <MudItem xs="6" md="4" lg="4" xl="2">
-            <SectionButton Label="База знаний" Link="/knowledge/about" Icon="@Icons.Material.Filled.MenuBook" />
+            <SectionButton Label="База знаний" Link="/knowledge/center-length" Icon="@Icons.Material.Filled.MenuBook" />
         </MudItem>
         <MudItem xs="6" md="4" lg="4" xl="2">
             <SectionButton Label="Расчеты времени" Link="/timecalc" Icon="@Icons.Material.Filled.Timer" />
