--- a/Sunduk.PWA/Pages/Knowledge.razor
+++ b/Sunduk.PWA/Pages/Knowledge.razor
@@ -1,41 +1,43 @@
 ﻿@page "/knowledge/{article}"
-@using System.Collections.Generic
 @using MudBlazor.Services
 
-<MudContainer MaxWidth=MaxWidth.False Class="mt-0 pl-0 pr-1">
-    <MudGrid Spacing=1 Class="mx-n1">
-        <MudItem xs=12 sm=4 lg=3 >
-            <MudList Dense=true Clickable="true" @bind-SelectedItem="selectedItem" @bind-SelectedValue="Article" Class="mt-n2">
-                <MudListItem Dense=true DisableGutters=true Icon="@Icons.Material.Filled.Info" Value="About" Href="@($"/knowledge/{About}")">
-                    <MudText Class="mx-n4" Typo=Typo.body2>О разделе</MudText>
-                </MudListItem>
-                <MudListItem Dense=true DisableGutters=true Icon="@Icons.Material.Filled.Folder">
+<MudContainer MaxWidth="MaxWidth.False" Class="mt-0 pl-0 pr-1">
+    <MudGrid Spacing="1" Class="mx-n1">
+        <MudItem xs="12" sm="4" lg="3" >
+            <MudList Dense="true" Clickable="true" @bind-SelectedItem="selectedItem" @bind-SelectedValue="Article" Class="mt-n2">
+                @*<MudListItem Dense="true" Class="pl-1" DisableGutters="true" Icon="@Icons.Material.Filled.Info" Value="About" Href="@($"/knowledge/{About}")">
+                    <MudText Class="mx-n4" Typo="Typo.body2">О разделе</MudText>
+                </MudListItem>*@
+                <MudListItem Dense="true" Class="pl-1" DisableGutters="true" Icon="@Icons.Material.Filled.Folder">
                     <ChildContent>
-                        <MudText Class="mx-n4" Typo=Typo.body2>Справочник</MudText>
+                        <MudText Class="mx-n4" Typo="Typo.body2">Справочник</MudText>
                     </ChildContent>
                     <NestedList>
-                        <MudListItem Dense=true Icon="@Icons.Material.Filled.Info" Value="CenterLength" Href="@($"/knowledge/{CenterLength}")">
-                            <MudText Class="mx-n4" Typo=Typo.body2>Глубина центровки</MudText>
+                        <MudListItem Dense="true" Icon="@Icons.Material.Filled.Info" Value="CenterLength" Href="@($"/knowledge/{CenterLength}")">
+                            <MudText Class="mx-n4" Typo="Typo.body2">Глубина центровки</MudText>
                         </MudListItem>
-                        <MudListItem Dense=true Icon="@Icons.Material.Filled.Info" Value="NptThread" Href="@($"/knowledge/{NptThread}")">
-                            <MudText Class="mx-n4" Typo=Typo.body2>Резьба NPT</MudText>
+                        <MudListItem Dense="true" Icon="@Icons.Material.Filled.Info" Value="BsppThread" Href="@($"/knowledge/{BsppThread}")">
+                            <MudText Class="mx-n4" Typo="Typo.body2">Резьба BSPP (G)</MudText>
                         </MudListItem>
-                        <MudListItem Dense=true Icon="@Icons.Material.Filled.Info" Value="Vectors" Href="@($"/knowledge/{Vectors}")">
-                            <MudText Class="mx-n4" Typo=Typo.body2>Векторы</MudText>
+                        <MudListItem Dense="true" Icon="@Icons.Material.Filled.Info" Value="NptThread" Href="@($"/knowledge/{NptThread}")">
+                            <MudText Class="mx-n4" Typo="Typo.body2">Резьба NPT (K)</MudText>
+                        </MudListItem>
+                        <MudListItem Dense="true" Icon="@Icons.Material.Filled.Info" Value="Vectors" Href="@($"/knowledge/{Vectors}")">
+                            <MudText Class="mx-n4" Typo="Typo.body2">Векторы</MudText>
                         </MudListItem>
                     </NestedList>
                 </MudListItem>
 
-                <MudListItem Dense=true DisableGutters=true Icon="@Icons.Material.Filled.Folder">
+                <MudListItem Dense="true" Class="pl-1" DisableGutters="true" Icon="@Icons.Material.Filled.Folder">
                     <ChildContent>
-                        <MudText Class="mx-n4" Typo=Typo.body2>Fanuc</MudText>
+                        <MudText Class="mx-n4" Typo="Typo.body2">Fanuc</MudText>
                     </ChildContent>
                     <NestedList>
-                        <MudListItem Dense=true Icon="@Icons.Material.Filled.Info" Value="MacroB" Href="@($"/knowledge/{MacroB}")">
-                            <MudText Class="mx-n4" Typo=Typo.body2>Macro B</MudText>
+                        <MudListItem Dense="true" Icon="@Icons.Material.Filled.Info" Value="MacroB" Href="@($"/knowledge/{MacroB}")">
+                            <MudText Class="mx-n4" Typo="Typo.body2">Macro B</MudText>
                         </MudListItem>
-                        <MudListItem Dense=true Icon="@Icons.Material.Filled.Info" Value="CustomVictorCycles" Href="@($"/knowledge/{CustomVictorCycles}")">
-                            <MudText Class="mx-n4" Typo=Typo.body2>Циклы Victor</MudText>
+                        <MudListItem Dense="true" Icon="@Icons.Material.Filled.Info" Value="CustomVictorCycles" Href="@($"/knowledge/{CustomVictorCycles}")">
+                            <MudText Class="mx-n4" Typo="Typo.body2">Циклы Victor</MudText>
                         </MudListItem>
                         @*<MudListItem Dense=true Icon="@Icons.Material.Filled.Info" Value="FanucGeneralProgramming" Href="@($"/knowledge/{FanucGeneralProgramming}")">
                             <MudText Class="mx-n4" Typo=Typo.body2>Общая информация</MudText>
@@ -50,7 +52,7 @@
                 </MudListItem>
             </MudList>
         </MudItem>
-        <MudItem xs=12 sm=8 lg=9 Class="mr-n4">
+        <MudItem xs="12" sm="8" lg="9" Class="mr-n4">
             @switch (Article?.ToString())
             {
                 case About:
@@ -61,6 +63,9 @@
                     break;
                 case Vectors:
                     <VectorComponent/>
+                    break;
+                case BsppThread:
+                    <BsppThreadComponent/>
                     break;
                 case NptThread:
                     <NptThreadComponent/>
@@ -89,7 +94,7 @@
 @code 
 {
     [Parameter]
-    public object Article { get; set; } = About;
+    public object Article { get; set; } = CenterLength;
     MudListItem selectedItem;
 
     [Inject] IBreakpointService BreakpointListener { get; set; }
@@ -125,6 +130,7 @@
     const string About = "about";
     const string CenterLength = "center-length";
     const string NptThread = "npt-thread";
+    const string BsppThread = "bspp-thread";
     const string MacroB = "macro-b";
     const string Vectors = "vectors";
     const string CustomVictorCycles = "custom-victor-cycles";
