--- a/Sunduk.PWA/Dialogs/ChangelogDialog.razor
+++ b/Sunduk.PWA/Dialogs/ChangelogDialog.razor
@@ -101,6 +101,11 @@ https://github.com/dece1ver/Sunduk
             "Улучшил примеры проточки под резьбу."}));
         Info.Add(new ChangelogInfo(new Version(1, 0, 5, 0), new DateTime(2023, 1, 17), new[] {
             "Возможность изменения режимов резания."}));
+        Info.Add(new ChangelogInfo(new Version(1, 0, 6, 0), new DateTime(2023, 3, 16), new[] {
+            "Переделал базу знаний, убрал неактуальную информацию добавил таблицы с информацией о резьбах BSPP и NPT."}));
+        Info.Add(new ChangelogInfo(new Version(1, 0, 6, 1), new DateTime(2023, 4, 23), new[] {
+            "Переделал базу знаний, убрал неактуальную информацию добавил таблицы с информацией о резьбах BSPP и NPT.",
+            "Во всякой хрени нижний диаметр BSPP резьбы соответствует размерам отверстий по ГОСТ 21348-75, также добавил размеры отверстий для BSPP и NPT в базе знаний."}));
         Info.Reverse();
     }
 
