--- a/Sunduk.PWA/Components/Stuff/ThreadTurningComponent.razor
+++ b/Sunduk.PWA/Components/Stuff/ThreadTurningComponent.razor
@@ -69,8 +69,40 @@
         @*<MudDivider Class="my-4"/>*@
         @if (Thread.Valid(ThreadDiameter, ThreadPitch))
         {
+            @if (ThreadStandard == ThreadStandard.NPT)
+            {
+                <MudItem Class="mt-4 xs=12">
+                    <MudPaper Outlined="true" Class="mt-1">
+                        <div style="text-align: center;" >
+                            <svg height="@FieldHeight" width="600" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="@($"{0} {0} {ContourWidth} {ContourHeight}")">
+                                <defs>
+                                    @if (Contour[0].X != null && Contour[0].Z != null)
+                                    {
+                                        <g height="@(ContourHeight)" width="@(ContourWidth)" id="contour">
+                                            <path stroke="#FF5722" stroke-width="2" fill="none"
+                                                  d="@Path"/>
+                                        </g>
+                                    }
+                                    <g height="50" width="50" id="cs">
+                                        <path stroke="white" stroke-dasharray="10 5" stroke-width="1" fill="none"
+                                              d="M -180,0 L 60,0"/>
+                                    <path stroke="white" stroke-width="1" fill="none"
+                                          d="M 52,3 L 60,0, L52,-3" />
+                                    </g>
+                                </defs>
+                                <g transform="translate(@(Math.Round(ContourWidth / 2 - (MediumZ ?? 0) * 4)),@(Math.Round(ContourHeight / 2 + (MediumX ?? 0) * 2)))">
+                                    <use xlink:href="#contour"/>
+                                    <use xlink:href="#cs"/>
+                                    <text x="4" y="@(-Contour[0].X / 2 * 4)" fill="white" style="font-family: 'Roboto Mono', monospace;" font-size="10">@($"X{Contour[0].X?.NC()} Z{Contour[0].Z?.NC()}")</text>
+                                    <text x="35" y="12" fill="white" style="font-family: 'Roboto Mono', monospace;" font-size="10">Z+</text>
+                                </g>
+                            </svg>
+                        </div>
+                    </MudPaper>
+                </MudItem>
+            }
             <MudItem Class="mt-4" xs="12">
-                <MudField Label="Информация" Variant="Variant.Filled" DisableUnderLine="true" Class="mt-n1">
+                <MudField Label="@Path" Variant="Variant.Filled" DisableUnderLine="true" Class="mt-n1">
                     <table>
                         <tr>
                             <td class="tl"><MudText Typo="Typo.caption">Верхний диаметр:</MudText></td>
@@ -227,7 +259,7 @@
                     CuttingType.External => $" R-{Thread.IntNptThreadShift(EndPointZ, StartPointZ).NC(2)}",
                     CuttingType.Internal => $" R{Thread.IntNptThreadShift(EndPointZ, StartPointZ).NC(2)}",
                     _ => string.Empty
-                    };
+                };
             }
             return string.Empty;
         }
@@ -430,45 +462,175 @@
         switch (ThreadStandard)
         {
             case ThreadStandard.Metric:
-            {
-                Thread.GetMetricValues(CurrentThreadTemplate, out string diameter, out string pitch);
-                ThreadDiameterString = diameter;
-                ThreadPitchString = pitch;
-                PlaneLength = 0;
-                EndPointZ = -20 - Math.Round(Thread.ThreadRunout(ThreadStandard, ThreadPitch, ThreadType), 1);
-                ThreadChamfer = Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType);
-                break;
-            }
+                {
+                    Thread.GetMetricValues(CurrentThreadTemplate, out string diameter, out string pitch);
+                    ThreadDiameterString = diameter;
+                    ThreadPitchString = pitch;
+                    PlaneLength = 0;
+                    EndPointZ = -20 - Math.Round(Thread.ThreadRunout(ThreadStandard, ThreadPitch, ThreadType), 1);
+                    ThreadChamfer = Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType);
+                    break;
+                }
             case ThreadStandard.BSPP:
-            {
-                Thread.GetBsppValues(CurrentThreadTemplate, out string diameter, out string pitch);
-                ThreadDiameterString = diameter;
-                ThreadPitchString = pitch;
-                PlaneLength = 0;
-                EndPointZ = -20 - Math.Round(Thread.ThreadRunout(ThreadStandard, ThreadPitch, ThreadType), 1);
-                ThreadChamfer = Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType);
-                break;
-            }
+                {
+                    Thread.GetBsppValues(CurrentThreadTemplate, out string diameter, out string pitch);
+                    ThreadDiameterString = diameter;
+                    ThreadPitchString = pitch;
+                    PlaneLength = 0;
+                    EndPointZ = -20 - Math.Round(Thread.ThreadRunout(ThreadStandard, ThreadPitch, ThreadType), 1);
+                    ThreadChamfer = Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType);
+                    break;
+                }
             case ThreadStandard.Trapezoidal:
-            {
-                Thread.GetTrapezoidalValues(CurrentThreadTemplate, out string diameter, out string pitch);
-                ThreadDiameterString = diameter;
-                ThreadPitchString = pitch;
-                PlaneLength = 0;
-                EndPointZ = -30;
-                ThreadChamfer = Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType);
-                break;
-            }
+                {
+                    Thread.GetTrapezoidalValues(CurrentThreadTemplate, out string diameter, out string pitch);
+                    ThreadDiameterString = diameter;
+                    ThreadPitchString = pitch;
+                    PlaneLength = 0;
+                    EndPointZ = -30;
+                    ThreadChamfer = Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType);
+                    break;
+                }
             case ThreadStandard.NPT:
-            {
-                Thread.GetNptValues(CurrentThreadTemplate, out string externalDiameter, out string internalDiameter, out string pitch, out double planeLength, out double threadLength);
-                ThreadDiameterString = externalDiameter;
-                ThreadPitchString = pitch;
-                PlaneLength = planeLength;
-                EndPointZ = -threadLength - Math.Round(Thread.ThreadRunout(ThreadStandard, ThreadPitch, ThreadType), 1);
-                ThreadChamfer = Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType);
-                break;
-            }
+                {
+                    Thread.GetNptValues(CurrentThreadTemplate, out string externalDiameter, out string internalDiameter, out string pitch, out double planeLength, out double threadLength);
+                    ThreadDiameterString = externalDiameter;
+                    ThreadPitchString = pitch;
+                    PlaneLength = planeLength;
+                    EndPointZ = -threadLength - Math.Round(Thread.ThreadRunout(ThreadStandard, ThreadPitch, ThreadType), 1);
+                    ThreadChamfer = Thread.ThreadChamfer(ThreadStandard, ThreadPitch, ThreadType);
+                    break;
+                }
         }
     }
+
+
+    public double? MediumX
+    {
+        get
+        {
+            double? minX = Contour.Select(x => x.X).Min();
+            if (minX > 0) minX = 0;
+            double? maxX = Contour.Select(x => x.X).Max();
+            return (maxX + minX) / 2;
+        }
+    }
+
+    public double? MaxLength
+    {
+        get
+        {
+            double? minZ = Contour.Select(x => x.Z).Min();
+            double? maxZ = Contour.Select(x => x.Z).Max();
+            return maxZ - minZ;
+        }
+    }
+
+    public double? MediumZ
+    {
+        get
+        {
+            double? minZ = Contour.Select(x => x.Z).Min();
+            double? maxZ = Contour.Select(x => x.Z).Max();
+            return (maxZ + minZ) / 2;
+        }
+    }
+
+    public double ContourHeight
+    {
+        get
+        {
+            double maxHeight = 200;
+            double tempCalc = 21.84 * 2 + 20;
+            if (tempCalc > maxHeight) maxHeight = tempCalc;
+            return Math.Abs(maxHeight);
+        }
+    }
+
+    public double ContourWidth
+    {
+        get
+        {
+            double maxWidth = 400;
+            double tempCalc = (MaxLength ?? 0) * 6;
+            if (tempCalc > maxWidth) maxWidth = tempCalc;
+            return Math.Abs(maxWidth);
+        }
+    }
+
+    public double FieldHeight
+    {
+        get
+        {
+            if (Contour.Count < 6) return 330;
+            return Contour.Count * 55;
+        }
+    }
+
+    public string Path
+    {
+        get
+        {
+            if (Contour[0].X is null && Contour[0].Z is null) return string.Empty;
+            string path = string.Empty;
+            foreach (var element in Contour)
+            {
+                switch (element)
+                {
+                    case Point point:
+                        path += $"M {(point.Z * 4).ToString().Replace(",", ".")},{(-point.X / 2 * 4).ToString().Replace(",", ".")} ";
+                        if (point.Blunt > 0 && Contour.Count > Contour.IndexOf(point) + 1)
+                        {
+                            path += $"A{(point.Blunt * 4).ToString(CultureInfo.InvariantCulture).Replace(",", ".")},{(point.Blunt * 4).ToString(CultureInfo.InvariantCulture).Replace(",", ".")},0,0{(point.Z > (Contour[Contour.IndexOf(point) + 1].Z) ? 0 : 1)},{(point.Z > (Contour[Contour.IndexOf(point) + 1].Z) ? -point.Blunt * 4 : point.Blunt * 4).ToString(CultureInfo.InvariantCulture).Replace(",", ".")},{(-Contour[Contour.IndexOf(point) + 1].X / 2 * 4).ToString().Replace(",", ".")} ";
+                        }
+                        break;
+                    case Line line:
+                        double? tempLineX = line.X ?? Contour[Contour.IndexOf(line) - 1].X;
+                        double? tempLineZ = line.Z ?? Contour[Contour.IndexOf(line) - 1].Z;
+                        path += $"L {(tempLineZ * 4).ToString().Replace(",", ".")},{(-tempLineX / 2 * 4).ToString().Replace(",", ".")} ";
+                        break;
+                    case Arc arc:
+                        double? tempArcX = arc.X ?? Contour[Contour.IndexOf(arc) - 1].X;
+                        double? tempArcZ = arc.Z ?? Contour[Contour.IndexOf(arc) - 1].Z;
+                        if (ValidArc(Contour.IndexOf(arc)))
+                        {
+                            path += $"A{(arc.Radius * 4).ToString(CultureInfo.InvariantCulture).Replace(",", ".")},{(arc.Radius * 4).ToString(CultureInfo.InvariantCulture).Replace(",", ".")},0,0{(arc.Direction is Infrastructure.Direction.CCW ? 0 : 1)},{(tempArcZ * 4).ToString().Replace(",", ".")},{(-tempArcX / 2 * 4).ToString().Replace(",", ".")} ";
+                        }
+                        else
+                        {
+                            path += $"L {(tempArcZ * 4).ToString().Replace(",", ".")},{(-tempArcX / 2 * 4).ToString().Replace(",", ".")} ";
+                        }
+                        break;
+                }
+            }
+            return path;
+        }
+        set { }
+    }
+
+    bool ValidArc(int index)
+    {
+        if (index >= Contour.Count || index <= 0) return false;
+        double radius = ((Contour[index] as Arc)!).Radius;
+        if (radius <= 0) return false;
+        double? xDifference = (Contour[index].X - Contour[index - 1].X) / 2;
+        double? zDifference = Contour[index].Z - Contour[index - 1].Z;
+        double length = Math.Sqrt(Math.Pow(xDifference ?? 0, 2) + Math.Pow(zDifference ?? 0, 2));
+        return !(radius * 2 < length);
+    }
+
+    public List<Element> Contour =>
+
+    new ()
+    {
+        new Point(ThreadType == CuttingType.External ? 17.215 : 21.82, 0),
+        new Line(ThreadType == CuttingType.External ? 20.815 : 18.22, -1.6),
+        new Line(ThreadType == CuttingType.External ? 20.715 + 2 * Math.Tan(1.79.Radians()) * Math.Abs(-18) : 18.32 - 2 * Math.Tan(1.79.Radians()) * Math.Abs(-18), -18),
+        new Line(ThreadType == CuttingType.External ? 20.715 + 2 * Math.Tan(1.79.Radians()) * Math.Abs(-18) : 18.32 - 2 * Math.Tan(1.79.Radians()) * Math.Abs(-18), -30),
+        new Line(ThreadType == CuttingType.External ? 0 : 30, -30),
+        new Line(ThreadType == CuttingType.External ? 0 : 30, 0),
+        new Line(ThreadType == CuttingType.External ? 17.215 : 21.82, 0),
+
+    };
+
 }
