--- a/Sunduk.PWA/Components/CAM/ToolTableTools/Milling/MillingToolsComponent.razor
+++ b/Sunduk.PWA/Components/CAM/ToolTableTools/Milling/MillingToolsComponent.razor
@@ -12,7 +12,7 @@
         <MudTh/>
     </HeaderContent>
     <RowTemplate>
-        <MudTd DataLabel="Позиция">T@(context.Position)</MudTd>
+        <MudTd DataLabel="Позиция">T@(context.Position.ToString("N2"))</MudTd>
         <MudTd DataLabel="Диаметр">Ø@(context.Diameter.ToPrettyString(stringOption: Util.PrettyStringOption.AsIs))</MudTd>
         <MudTd DataLabel="Зубья">@context.Edges</MudTd>
         @if (context.Type == MillingTool.Types.Solid)
